--- a/projeto01/index.html
+++ b/projeto01/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<h1>CURIOSIDADES DE TECNOLOGIA</h1>
 		
-		<p>Tudo aquilo que você sempre quis saer sobre o mundo Tech,<br>em um único lugar.</p>
+		<p>Tudo aquilo que você sempre quis saber sobre o mundo Tech,<br>em um único lugar.</p>
 		
 		<nav>
 			<a href='@'>Home</a>
