--- a/projeto01/index.html
+++ b/projeto01/index.html
@@ -135,7 +135,8 @@
 	
 	<footer>
 		<p>
-			Site criado por <a class="linkfooter" href="https://gustavoguanabara.github.io/" target="_blank" 
+			Site criado por <a class="linkfooter" href="linkedin.com/in/marianabelo26" target="_blank" 
+				rel="external">Mariana Belo</a> com ajuda do <a class="linkfooter" href="https://gustavoguanabara.github.io/" target="_blank" 
 				rel="external">Gustavo Guanabara</a> para o 
 				<a class="linkfooter" href="https://www.youtube.com/cursoemvideo" target="_blank" 
 				rel="external">CursoemVideo</a>.
