--- a/projeto02/cordelmoderno.html
+++ b/projeto02/cordelmoderno.html
@@ -95,7 +95,8 @@
 	</section>
 	
 	<footer>
-		<p>Site criado por 
+		<p>Site criado por <a class="linkfooter" href="https://linkedin.com/in/marianabelo26" target="_blank" 
+				rel="external">Mariana Belo</a> com ajuda do 
 		<a href='https://gustavoguanabara.github.io/' 
 		target='_blank'><strong>Gustavo Guanabara</strong></a>
 		para o 
