--- a/projeto-tela-login/index.html
+++ b/projeto-tela-login/index.html
@@ -42,7 +42,7 @@
 		</section>
 	</main>
 	<footer>
-		<p>Site criado por <strong>Mariana Belo</strong> com orientacao do
+		<p>Site criado por <a href="https://www.linkedin.com/in/marianabelo26"><strong>Mariana Belo</strong></a> com orientacao do
 		<strong>Gustavo Guanabara</strong> e o <strong>Curso em Video</strong></p>
 	</footer>
 </body>
