--- a/projeto-tela-login/index.html
+++ b/projeto-tela-login/index.html
@@ -17,7 +17,7 @@
 			</div>
 			<div id="form">
 				<h1>Login</h1>
-				<p>Bem-vindo(a) novamente. Faca seu login!</p>
+				<p>Bem-vindo(a). Faça seu login!</p>
 				<form action="login.js" method="post" autocomplete="on">
 					<div class="camp">
 						<span class="material-symbols-outlined">person</span>
